@@ -1,3 +1,9 @@
+2001-10-30  Keith Seitz  <keiths@redhat.com>
+
+	* wrapper.h (gdb_value_struct_elt): New function.
+	* wrapper.c (gdb_value_struct_elt): Ditto.
+	(do_captured_value_struct_elt): Ditto.
+
 2001-10-30  Andrew Cagney  <ac131313@redhat.com>
 
 	* README, NEWS: Update for 5.1.
